<resources>

    <string name="FACEBOOK_APP_ID">712603695594982</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">139f4b7b56b1628dca098ef2cbff2f61</string>
    <string name="ak_login_protocol_scheme">ak712603695594982</string>

    <string name="app_name">Manhattan</string>
    <string name="app_name_2">Govind ki Gali</string>
    <string name="title_play">Play</string>
    <string name="title_thought">Thought</string>
    <string name="title_upcoming">Upcomings</string>
    <string name="title_my_music">My Music</string>
    <string name="title_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="share">Share</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="subscribe">Subscribe</string>
    <string name="download">Download</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="languages">Select Language/भाषा चुनिए</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="recently_played">Recently Played</string>
    <string name="favourites">Favourites</string>
    <string name="timeline">00:00</string>
    <string name="test_string">June\n 19</string>
    <string name="invite">Invite</string>
    <string name="add_to_calender">Add To Calender</string>
    <string name="directions">Directions</string>
    <string name="share_using">Share Using</string>
    <string name="invite_intent_text">Yo Buddy! Do attend Vinod Agarwal\'s live event and enjoy the ultimate divine aura created by him.</string>
    <string name="no_directions">Sorry! Can\'t Search for Directions</string>
    <string name="add_to_calender_title">Live Event - Vinod Agarwal</string>
    <string name="create_playlist">Create PlayList</string>
    <string name="create">CREATE</string>
    <string name="type_name">Type Name...</string>
    <string name="cancel">Cancel</string>


    <string name="AboutAppDetails_PrivacyPolicy">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Quisque malesuada, erat ac sodales vestibulum,
        ante arcu egestas ipsum, sed elementum augue lacus eget magna. Maecenas quis
        imperdiet nibh. Aliquam varius orci eget diam semper sollicitudin.
        Nulla sollicitudin sem in tortor vulputate, vel tempus metus commodo.</string>
    <string name="AboutAppDetails_TermsnConditions">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Quisque malesuada, erat ac sodales vestibulum,
        ante arcu egestas ipsum, sed elementum augue lacus eget magna. Maecenas quis
        imperdiet nibh. Aliquam varius orci eget diam semper sollicitudin.
        Nulla sollicitudin sem in tortor vulputate, vel tempus metus commodo.</string>
    <string name="AboutAppDetails_AboutCompany">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Quisque malesuada, erat ac sodales vestibulum,
        ante arcu egestas ipsum, sed elementum augue lacus eget magna. Maecenas quis
        imperdiet nibh. Aliquam varius orci eget diam semper sollicitudin.
        Nulla sollicitudin sem in tortor vulputate, vel tempus metus commodo.</string>


    <string name="title_send_feedback">Send feedback</string>
    <string name="mail_feedback_email">feedback@example.com</string>
    <string name="mail_feedback_subject">Feedback on your app</string>
    <string name="mail_feedback_message">Hi,I would like to give you some feedback:</string>
    <string name="settings_change_language">Change Language</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_night_mode">Night Mode</string>
    <string name="settings_rate_app">Rate App</string>
    <string name="settings_share_app">Share app</string>
    <string name="settings_about_app">About App</string>
    <string name="play_lists">Play Lists</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="facebook_app_id">238447260026138</string>
    <string name="now_playing">NOW PLAYING</string>
    <!--<string name="default_web_client_id">25611614140-msaag3cb2igdcbt62dsdqgdpdgc3k9qf.apps.googleusercontent.com</string>-->

</resources>
