<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="250dp">

    <LinearLayout
        android:id="@+id/ll_createPlaylist"
        android:background="?attr/selectableItemBackground"
        android:padding="10dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_playlist_add_black_36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/create_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_popPlaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/layout_song"/>

    <EditText
        android:id="@+id/et_list_name"
        android:inputType="text"
        android:hint="@string/type_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/bt_create"
        android:text="@string/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/bt_cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>