<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_recents"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="5dp">

        <TextView
            android:id="@+id/tv_recently_played"
            android:text="@string/recently_played"
            android:background="@android:color/holo_blue_bright"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_fav"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="5dp">

        <TextView
            android:id="@+id/tv_fav"
            android:text="@string/favourites"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"  />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_play_lists"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="5dp">

        <TextView
            android:id="@+id/tv_play_list"
            android:text="@string/play_lists"
            android:background="@android:color/holo_purple"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"  />

    </android.support.v7.widget.CardView>

</LinearLayout>