<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agarwal.vinod.govindkigali.activities.AboutAppDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="PrivacyPolicyPressed"
                android:text="> Privacy Policy"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/id_PrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AboutAppDetails_PrivacyPolicy"
                android:textSize="20dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:onClick="TermsNConditionsPressed"
                android:text="> Terms &amp; Conditions"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/id_TermsnConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AboutAppDetails_TermsnConditions"
                android:textSize="20dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:onClick="AboutCompanyPressed"
                android:text="> About Company"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/id_AboutCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AboutAppDetails_AboutCompany"
                android:textSize="20dp"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
